Again edit ID to attempt to fix spacing on other carousels

--- a/style.css
+++ b/style.css
@@ -58,43 +58,63 @@ h1, h2, h3, h4 {
 
 ======================== */
 
+header {
+  padding-top: 1%;
+  margin-bottom: 5%;
+}
 /* header img {
   max-width: 225px;
   object-fit: contain;
 } */
 
-/* Header Top Section */
+/* Top Navigation Menu */
 
-.header-top {
-  padding: 1% 0;
+.top-menu-container {
+  background: #ffffff;
+  padding: 0 4% 1% 4%;
 }
 
-.header-top p {
-  color: #ff0000;
+.top-menu-class a {
+  color: #0c005a;
   font-weight: 600;
-}
-
-/* Navigation Menu */
-
-.main-menu-background {
-  padding-top: 1%;
-  background: #0c005a;
-}
-
-.main-navigation a {
-  color: #ffffff;
-  font-weight: 600;
+  margin: 0 3rem;
   text-decoration: none;
 }
 
-.main-navigation a:hover {
+.top-menu-class a:hover {
+  color: #bc2525;
+}
+
+.top-menu-class li {
+  display: inline;
+}
+
+/* Main Navigation Menu */
+
+.main-menu-container {
+  background: #0c005a;
+  padding: 2% 4% 1% 4%;
+}
+
+.main-menu-class a {
+  color: #ffffff;
+  font-weight: 600;
+  margin: 0 3rem;
+  text-decoration: none;
+}
+
+.main-menu-class a:hover {
   color: #bc2525;
 }
 
 .main-menu-class li {
   display: inline;
-  margin: 0 4rem;
 }
+
+/* header img {
+  max-width: 150px;
+  object-fit: contain;
+} */
 
 /* ======================
 
@@ -240,10 +260,10 @@ h5.card-title {
     display: inline-block;
     padding: 0;
 }
-#sp-wp-carousel-free-id-108 .wpcp-single-item {
+.wpcp-carousel-wrapper #sp-wp-carousel-free-id-109.wpcp-post-carousel .wpcp-single-item {
   height: 275px;
 }
-#sp-wp-carousel-free-id-108 .wpcp-slide-image {
+.wpcp-carousel-wrapper #sp-wp-carousel-free-id-109.wpcp-post-carousel .wpcp-single-item {
   padding-top: 10px;
 }
 
